--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 coverage==6.5.0
+dataclasses-json==0.5.7
 ddsketch==2.0.4
 ddtrace==1.6.3
 dnspython==2.2.1
@@ -38,10 +39,13 @@ Jinja2==3.1.2
 jsonschema==4.17.1
 Mako==1.2.3
 MarkupSafe==2.1.1
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
 mypy==0.982
 mypy-extensions==0.4.3
 oauthlib==3.2.2
 packaging==21.3
+pika==1.3.1
 Pillow==9.3.0
 plotly==5.11.0
 pluggy==1.0.0
@@ -57,6 +61,7 @@ pytest-mock==3.10.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 requests==2.28.1
+requests-mock==1.10.0
 requests-mock-flask==2022.4.3
 requests-oauthlib==1.3.1
 rsa==4.9
@@ -64,6 +69,7 @@ six==1.16.0
 SQLAlchemy==1.4.42
 tenacity==8.1.0
 tomli==2.0.1
+typing-inspect==0.8.0
 typing_extensions==4.4.0
 uritemplate==4.1.1
 urllib3==1.26.12
