Add app context to the CLI

--- a/.env-file
+++ b/.env-file
@@ -3,17 +3,16 @@ FLASK_DEBUG=1
 
 FLASK_URL=<server_url>
 
-#REPOSITORY URLS
-ITEMS_URL='https://api.rollbar.com/api/1/items/' 
-ITEM_URL='https://api.rollbar.com/api/1/item' 
-REPORTS_URL='https://api.rollbar.com/api/1/reports/' 
+#RABBITMQ 
+BROKER_HOST=<host>
 
-#DB CONNECT
-SECRET_KEY=<key>
-SQLALCHEMY_DATABASE_URI=<database_string>
+#MAIL_SERVER
+MAIL_SERVER=<mail_server>
+MAIL_PORT=<number>
+MAIL_USERNAME=<user>
+MAIL_API_KEY=<api_key>
 
-#ROLLBAR CONNECTION
-WRITE=<write_key>
-POST_SERVER_ITEM=<server_key>
-POST_CLIENT_ITEM=<client_key>
-READ=<read_key>
+#REPOSITORY
+REPOSITORY_TOKEN=<token>
+BASE_ID=<id>
+TABLE_NAME=<name>
