Add new-features branch

--- a/.env-file
+++ b/.env-file
@@ -1,18 +1,35 @@
 FLASK_APP=run.py
 FLASK_DEBUG=1
 
-FLASK_URL=<server_url>
+FLASK_URL='http://localhost:5000'
 
-#RABBITMQ 
-BROKER_HOST=<host>
+# FORMS
+SECRET_KEY = 'abcdefghyjklmnopqrstuvwxyz'
 
-#MAIL_SERVER
-MAIL_SERVER=<mail_server>
-MAIL_PORT=<number>
-MAIL_USERNAME=<user>
-MAIL_API_KEY=<api_key>
+# DB
+SQLALCHEMY_DATABASE_URI='postgresql+psycopg2://postgres:secret@localhost:5432/flaskats'
 
-#REPOSITORY
-REPOSITORY_TOKEN=<token>
-BASE_ID=<id>
-TABLE_NAME=<name>
+# RABBITMQ
+BROKER_HOST='localhost'
+
+# MAIL_SERVER
+MAIL_SERVER='smtp.server.net'
+MAIL_PORT='587'
+MAIL_USERNAME='apikeyUSER'
+MAIL_API_KEY='SG.ABCDEFGHIJKLMNOPQRSTUVWXYZ'
+MAIL_DEFAULT_SENDER="mail@mail.com"
+
+
+# REPOSITORY
+REPOSITORY_TOKEN='abcdefg.ABCDEFGHIJKLMNOPQRSTUVWXYZ'
+BASE_ID='ABCDEFGHIJKLMNOPQRSTUVWXYZ'
+TABLE_NAME='People'
+
+
+# RECRUITEE
+COMPANY_ID=1234567
+RECRUITEE_TOKEN='ABCDEFGHIJKLMNOPQRSTUVWXYZ'
+
+
+# HELLO SIGN
+HS_API_KEY='ABCDEFGHIJKLMNOPQRSTUVWXYZ'
