--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
-version: '3'
+version: "3"
+
 services:
    rabbitmq:
       image: rabbitmq:3-management
@@ -6,3 +7,19 @@ services:
       ports:
          - 5672:5672
          - 15672:15672
+
+   database:
+      image: postgres:14-alpine
+      restart: always
+      environment:
+         - POSTGRES_USER=postgres
+         - POSTGRES_PASSWORD=secret
+         - POSTGRES_DB=flaskats
+      ports:
+         - '5432:5432'
+      volumes:
+         - flaskapp-db:/var/lib/postgresql/data
+
+volumes:
+   flaskapp-db:
+      driver: local
